--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
 </head>
 <body>
     
-    <h1>Arrancando</h1>
+   <header>
+       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+           <div class="container">
+               <a href="index.html" class="navbar-brand">Silver-Bullet</a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-targe="#menu-nav" aria-expanded="false" aria-label="Menu navegacion">
+                   <span class="navbar-toggler-icon"></span>
+               </button>
+           </div>
+           <!-- agregregando el menu-->
+           <div class="collapse navbar-collapse" id="menu-nav">
+               <ul class="navbar-nav mr-auto"> <!--Recordar, mr = margin rigth auto-->
+                    <li class="nav-item">
+                        <a href="">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="">Contacto</a>
+                    </li>
+
+               </ul>
+
+           </div>
+       </nav>
+   </header>
     <script src="assets/bootstrap/js/jquery-3.41..min.js"></script>
     <script src="assets/bootstrap/js/popper.min..js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
