--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=s, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <title>Landign Page</title>
 </head>
@@ -12,30 +13,40 @@
        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
            <div class="container">
                <a href="index.html" class="navbar-brand">Silver-Bullet</a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-targe="#menu-nav" aria-expanded="false" aria-label="Menu navegacion">
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-nav" aria-expanded="false" aria-label="Menu navegacion">
                    <span class="navbar-toggler-icon"></span>
                </button>
-           </div>
-           <!-- agregregando el menu-->
-           <div class="collapse navbar-collapse" id="menu-nav">
-               <ul class="navbar-nav mr-auto"> <!--Recordar, mr = margin rigth auto-->
-                    <li class="nav-item">
-                        <a href="">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="">Contacto</a>
-                    </li>
+                <!-- agregregando el menu-->
+                <div class="collapse navbar-collapse" id="menu-nav">
+                    <ul class="navbar-nav mr-auto"> <!--Recordar, mr = margin rigth auto-->
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Inicio</a>
+                            </li>
+                            <!--Menu desplegable-->
+                            <li class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" id="nav-dropdown" data-toggle="dropdown">Productos</a>
+                                <div class="dropdown-menu" aria-labelledby="nav-dropdown">
+                                    <a href="" class="dropdown-item">Computadoras</a>
+                                    <a href="" class="dropdown-item">Laptos</a>
+                                    <a href="" class="dropdown-item">Smartphones</a>
+                                    <a href="" class="dropdown-item">Accesorios</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Contacto</a>
+                            </li>
 
-               </ul>
-
-           </div>
+                    </ul>
+                    <form action="#" class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Buscar...">
+                        <button class="btn btn-primary my-2 my-md-0" type="submit">Buscar</button>
+                    </form>
+                </div>
+            </div>
        </nav>
    </header>
-    <script src="assets/bootstrap/js/jquery-3.41..min.js"></script>
-    <script src="assets/bootstrap/js/popper.min..js"></script>
+        <script src="assets/bootstrap/js/jquery-3.41.min.js"></script>
+        <script src="assets/bootstrap/js/popper.min.js"></script> 
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
