--- a/index.html
+++ b/index.html
@@ -45,8 +45,44 @@
             </div>
        </nav>
    </header>
-        <script src="assets/bootstrap/js/jquery-3.41.min.js"></script>
-        <script src="assets/bootstrap/js/popper.min.js"></script> 
+   <main class="container">
+        <div class="row">
+            <div class="col">
+                <div class="carousel slide" id="slideshow" data-ride="carousel">
+                    <!-- Indicadores-->
+                    <ol class="carousel-indicators">
+                        <li data-target="#slideshow" data-slide-to="0" class="active"></li>
+                        <li data-target="#slideshow" data-slide-to="1"></li>
+                        <li data-target="#slideshow" data-slide-to="2"></li>
+                    </ol>
+                    <!-- slides-->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/img/s1.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/s2.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/s3.jpg" alt="">
+                        </div>
+                    </div>
+                    <!-- controles-->
+                    <a href="#slideshow" class="carousel carousel-control-prev" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+                    <a href="#slideshow" class="carousel carousel-control-next" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Siguiente</span>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+   </main>
+   <script src="assets/bootstrap/js/jquery-3.41.min.js"></script>
+   <script src="assets/bootstrap/js/popper.min.js"></script> 
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
