--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                     <!-- slides-->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/s1.jpg" alt="">
+                            <img src="assets/img/s1.jpg" class="d-block w-100" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/s2.jpg" alt="">
+                            <img src="assets/img/s2.jpg" class="d-block w-100" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/s3.jpg" alt="">
+                            <img src="assets/img/s3.jpg" class="d-block w-100" alt="">
                         </div>
                     </div>
                     <!-- controles-->
@@ -80,7 +80,145 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="py-4 border-bottom">
+                    <h1 class="text-center">Galeria</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row py-4">
+            <!--La regla para responsive es la siguiente: para tamanios pequenos, que ocupe 12 (equivalente al 100%
+            Para tamanios medianos chicos, que ocupe 6, (equivalnte a 50%) y para tamanios grandes, que ocupe 3 columnas (euivalente 25%) 
+            Recordar que bootstrap maneja un sistema de grillas de 12 columnas. Es por esto que por cada nueva fila (row), puedo decir
+            cuantas columnas van a abarcar cada item. 
+            -->
+            <div class="col-12 col-sm-6 col-lg-3"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/1.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">IPhone</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/2.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Mac</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/3.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Canon</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/4.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Apple Wacth</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/5.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Keyboard</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/6.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Ipad</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/7.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">MacBook</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
+                <div class="card">
+                    <img class="card-img-top " src="assets/img/8.jpg" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title">Cameras</h3>
+                        <p class="card-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-sm btn-secondary">Detalles</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
    </main>
+   <footer>
+       <div class="container">
+           <div class="row border-top py-5">
+               <div class="col">
+                    <h3 class="lead">Silver-Bullet</h3>
+                    <a href="" class="btn btn-link">Acerca de</a>
+                    <a href="" class="btn btn-link">Contacto</a>
+               </div>
+               <div class="col text-right">
+                   <a href="#" class="btn btn-link">Ir a Inicio</a>
+               </div>
+           </div>
+       </div>
+   </footer>
    <script src="assets/bootstrap/js/jquery-3.41.min.js"></script>
    <script src="assets/bootstrap/js/popper.min.js"></script> 
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
