se corrigio visualizacion card

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Recordar que bootstrap maneja un sistema de grillas de 12 columnas. Es por esto que por cada nueva fila (row), puedo decir
             cuantas columnas van a abarcar cada item. 
             -->
-            <div class="col-12 col-sm-6 col-lg-3"> 
+            <div class="col-12 col-sm-6 col-lg-3 mb-4"> 
                 <div class="card">
                     <img class="card-img-top " src="assets/img/1.jpg" alt="">
                     <div class="card-body">
